2011-12-21  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35139

	* parser.y (yybadtoken): The current token (yychar) is 0 on byacc
	rather than YYEOF or YYEMPTY, so we have to handle that.

2011-12-21  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (distclean): use rm -rf on mpi directory.

2011-12-20  Kaz Kylheku  <kaz@kylheku.com>

	Test case for bug #35137

	* tests/007/except-2.expected: New file.

	* tests/007/except-2.txr: New file.

2011-12-20  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New function registered.

	* lib.c (cat_vec): New function.

	* lib.h (cat_vec): Declared.

	* txr.1: Documentation stub.

2011-12-20  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35137

	* unwind.c (uw_unwind_to_exit_point): When jumping to a catch frame,
	do not mark it invisible.

	* unwind.h (uw_catch): Flip the matches to nil so that this catch
	frame can no longer be identified as an unwind point by uw_throw,
	and thus will not be re-entered for the purposes of handling
	an exception. It remains visible for the purposes of running the
	clean up code.
	(uw_unwind): Prior to executing cleanup forms, flip the visibility
	to 0. This means that the frame will no longer be re-entered
	for any reason.

2011-12-20  Kaz Kylheku  <kaz@kylheku.com>

	Streamlining exception handling macros a little bit.

	* eval.c (op_unwind_protect): Use uw_simple_catch_begin,
	and remove the uw_catch (exsym, exvals) clause. Put
	explicit braces around the unwind code even though it
	is only one statement.

	* match.c (do_txeval): Got rid of empty uw_unwind clause.
	This is not needed any longer.
	(v_try): Got rid of explicit uw_do_unwind calls. 

	* unwind.h (uw_simple_catch_begin): New macro.
	(uw_do_unwind): Macro removed.
	(uw_catch): Added goto uw_unwind_label at the front.
	This way if the previous clause falls through,
	control goes to the unwind logic.
	(uw_unwind): Got rid of initial break. Previous
	clause should fall through to unwind logic,